// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prueba del GifExpertApp snapshot 1`] = `
<Fragment>
  <h2>
    Gix Expert App
  </h2>
  <hr />
  <AddCategory
    setCategories={[Function]}
  />
  <ol />
</Fragment>
`;

exports[`Prueba del GifExpertApp snapshot 2`] = `
<Fragment>
  <h2>
    Gix Expert App
  </h2>
  <hr />
  <AddCategory
    setCategories={[Function]}
  />
  <ol>
    <GifGrid
      category="One Punch"
      key="One Punch"
    />
    <GifGrid
      category="Dragon Ball"
      key="Dragon Ball"
    />
  </ol>
</Fragment>
`;
